website/styledark.css
* {
    font-family: pt-sans, sans-serif;
    /*font-family: -apple-system, BlinkMacSystemFont, sans-serif;*/
    overflow-x:hidden;
}
html {
    scroll-behavior: smooth;
}
body {
    margin: auto;
    padding: 0px;
    background-color: black;
    padding-bottom: 20%;
}
h1 {
    color: black;
}
h2 {
    font-size: 200%;
    font-style: italic;
    color: white;
    font-weight: bold;


}
h3 {
    font-size: 200%;
    color: white;

}
h4 {
    font-size: 150%;
    color: white;

}
p {
    font-size: 150%;
    color: white;
}
a {
    text-decoration: none;
    color: white;
}
footer {
    padding-top: 20%;
    text-align: center;
}
small {
    color: white;
}
/*Buttons*/
.button {
    display: block;

    padding: 24px 12px;
    border: 4px solid;
    border-color: rgb(0, 186, 243);
    border-radius: 12px;
    overflow-y: hidden;

    text-align: center;
    font-size: 24px;
    font-weight: bold;
     
    transition-duration: 0.8s;
    -webkit-transition-duration: 0.8s;
}

#darkbutton {
    margin-top: 4%;
    padding: 18px 9px;
    border: 4px solid;
    border-color: white;
    background-color: black;
    color: white;
    border-radius: 12px;
    overflow-y: hidden;

    text-align: center;
    font-size: 20px;
    font-weight: bold;
     
    transition-duration: 0.8s;
    -webkit-transition-duration: 0.8s;
}
/*Start*/
#startscreen {
    text-align: center;  
    font-size: 0; /*getting rid of black bar*/
}

#blurback {
    width: 100%;
    height: 100vh; 
    z-index: -1;
    object-position: 10% 0%;
    object-fit: cover;
}
#myname {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -100%);
    font-size: calc(36px + 6vw);
}
#topemail {
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%, 100%);
    
    color: black;
    font-size: 24px;

}
/*Navbar*/
ul#navbar {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: white;
    text-align:center;
    box-shadow: 0 8px 16px 0 white;
} 
li.navitem {
    display:inline;
}
li.navitem a {
    margin-bottom: -4px;
    display: inline-block;
    text-align: center;
    padding: 14px 20px;
    text-decoration: none;
    transition-duration: 0.8s;
    -webkit-transition-duration: 0.8s;

    color: black;
    font-size: 20px; 
}
.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}
#sections {
    margin: auto;
    
    overflow: visible;
    min-width: 650px;
    max-width: 650px;
}
.section {
    overflow: visible;
    margin-top: 10%;
    margin-bottom: 10%;
}
/*Greeting Buttons*/
#aboutbuttons {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: visible;
    text-align: center;
    
}
.lihorz {
    overflow: visible;
    display: inline-block;
    padding-left: 5%;
    padding-right: 5%;
}
#githubbut, #linkedinbut, #resume {
    width: 100px;
    height: 40px; 
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 5%;
}
#resume {
    line-height: 40px;
}

.githubimg, #linkedinimg, .hyperimg {
    max-width: 100%;
    max-height: 100%;
}
/*Project Grid*/
.cardarea {
    overflow: visible;
    list-style-type: none;
    text-align: center
}
.card {
    display: inline-block;
    
    margin: 2%;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
    transition: 0.3s;
    border-radius: 5px;
    
    font-size: 0px;
    width: 90%;
    max-width: 290px;

    transition-duration: 0.4s;
    -webkit-transition-duration: 0.4s;
    
}
.cardimg {
    border-bottom: solid;
    border-bottom-width: 15px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    width: 100%;
    height: 175px;
    margin-left: auto;
    margin-right: auto;
    
    
}
.site.cardimg {
    border-color: blue;
}
.game.cardimg {
    border-color: red;
}
.cardbutton {
    
    list-style-type: none;
    text-align: center;
    
}
.gitlink, .hyperlink {
    border-top: none;
    display: block;
    height: 32px;
    border-radius: 0px;
    
}
.hyperlink {
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
}

.mail {
    margin-left: auto;
    margin-right: auto;
    width: 120px;
}
/*Hyperlinks*/
.linked {
    color: rgb(0, 186, 243);
    text-decoration: underline;
}

/*Hover Animations*/
@media (hover: hover) { 
    li.navitem a:hover {
      background: black;
      color: white;
    }
    .button:hover {
        background-color: rgb(0, 186, 243);
        box-shadow: 0 0 8px rgb(0, 186, 243), 0 0 25px rgb(0, 186, 243);
    }
    .darkbutton:hover {
        background-color: white;
        color: black;
    }
    #topemail:hover {
        color: white;
    }
    .linked:hover {
        color: rgb(0, 87, 114);
    }
    .card:hover {
        box-shadow: 0 0 24px rgb(0, 186, 243);
    }
    #darkbutton:hover {
        background-color: white;
        color: black;
    }
}

